--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>vue2</title>
+    <base href="./" />
   </head>
   <body>
     <div id="app"></div>
-  <script type="text/javascript" src="bundle-7f1e391e8358f1029ca2.js"></script></body>
+  <script type="text/javascript" src="bundle-93ec83116c22a04eeef6.js"></script></body>
 </html>
